test/tests/compiler/18_structures/invalid_parse/plx1_sizeof_struct_pointer_1.plx
type struc s1(a: i32)

pub fn main(none) i32 {
    sizeof<*struc s1>[].a = 10
    return 0
}
